# Xteink-Claude-Pet

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: hardware-reference.md  operations.md
firmware/: platformio.ini
firmware/src/: main.cpp  main.cpp.splitpane  sprites.h
scripts/: install-hooks.sh  on-event.sh  test-hooks.sh
src/claude_pet/: __init__.py  __main__.py  daemon.py  protocol.py  serial_conn.py  socket_server.py  sprites.py  state_machine.py
